--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -19,6 +19,9 @@
 		<Content Include="..\..\.dockerignore">
 			<Link>.dockerignore</Link>
 		</Content>
+		<Content Include="appsettings.yaml">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
