Refactor embassy access components: clean up code, enhance service handling, and add citizenship service instructions in appsettings.yaml

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -361,3 +361,9 @@ RussianEmbassy:
         - Id: PWR
           Name: Доверенность
           Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте
+    - Id: VSA
+      Name: Гражданство
+      Children:
+        - Id: ISS
+          Name: Отказ от гражданства
+          Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте ее в чат.
