--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -165,178 +165,213 @@ Worker:
 Embassies:
   Id: EMB
   Name: Embassies
+  Description: Choose an embassy
   Children:
     - Id: RU
-      Name: Russian
+      Name: Российское
+      Description: В какой стране находится посольство РФ?
       Children:
         - Id: SRB
-          Name: Serbia
+          Name: Сербия
+          Description: В каком городе Сербии находится посольство РФ?
           Children:
             - Id: BG
-              Name: Belgrade
+              Name: Белград
         - Id: GER
-          Name: Germany
+          Name: Германия
+          Description: В каком городе Германии находится посольство РФ?
           Children:
             - Id: BER
-              Name: Berlin
+              Name: Берлин
             - Id: MUN
-              Name: Munich
+              Name: Мюнхен
         - Id: FRA
-          Name: France
+          Name: Франция
+          Description: В каком городе Франции находится посольство РФ?
           Children:
             - Id: PAR
-              Name: Paris
+              Name: Париж
         - Id: ITA
-          Name: Italy
+          Name: Италия
+          Description: В каком городе Италии находится посольство РФ?
           Children:
             - Id: ROM
-              Name: Rome
+              Name: Рим
             - Id: MIL
-              Name: Milan
+              Name: Милан
         - Id: ESP
-          Name: Spain
+          Name: Испания
+          Description: В каком городе Испании находится посольство РФ?
           Children:
             - Id: MAD
-              Name: Madrid
+              Name: Мадрид
         - Id: CZE
-          Name: Czechia
+          Name: Чехия
+          Description: В каком городе Чехии находится посольство РФ?
           Children:
             - Id: PRG
-              Name: Prague
+              Name: Прага
         - Id: POL
-          Name: Poland
+          Name: Польша
+          Description: В каком городе Польши находится посольство РФ?
           Children:
             - Id: WAR
-              Name: Warsaw
+              Name: Варшава
         - Id: SWI
-          Name: Switzerland
+          Name: Швейцария
+          Description: В каком городе Швейцарии находится посольство РФ?
           Children:
             - Id: BER
-              Name: Bern
+              Name: Берн
         - Id: UK
-          Name: United Kingdom
+          Name: Великобритания
+          Description: В каком городе Великобритании находится посольство РФ?
           Children:
             - Id: LON
-              Name: London
+              Name: Лондон
         - Id: CHN
-          Name: China
+          Name: Китай
+          Description: В каком городе Китая находится посольство РФ?
           Children:
             - Id: BJ
-              Name: Beijing
+              Name: Пекин
             - Id: SH
-              Name: Shanghai
+              Name: Шанхай
             - Id: GZ
-              Name: Guangzhou
+              Name: Гуанчжоу
         - Id: USA
-          Name: United States
+          Name: Соединенные Штаты
+          Description: В каком городе США находится посольство РФ?
           Children:
             - Id: DC
-              Name: Washington DC
+              Name: Вашингтон
             - Id: NY
-              Name: New York City
+              Name: Нью-Йорк
         - Id: IN
-          Name: India
+          Name: Индия
+          Description: В каком городе Индии находится посольство РФ?
           Children:
             - Id: DL
-              Name: New Delhi
+              Name: Нью-Дели
             - Id: MUM
-              Name: Mumbai
+              Name: Мумбаи
         - Id: JP
-          Name: Japan
+          Name: Япония
+          Description: В каком городе Японии находится посольство РФ?
           Children:
             - Id: TK
-              Name: Tokyo
+              Name: Токио
         - Id: EG
-          Name: Egypt
+          Name: Египет
+          Description: В каком городе Египта находится посольство РФ?
           Children:
             - Id: CA
-              Name: Cairo
+              Name: Каир
         - Id: BR
-          Name: Brazil
+          Name: Бразилия
+          Description: В каком городе Бразилии находится посольство РФ?
           Children:
             - Id: BSB
-              Name: Brasília
+              Name: Бразилиа
             - Id: SP
-              Name: São Paulo
+              Name: Сан-Паулу
         - Id: AU
-          Name: Australia
+          Name: Австралия
+          Description: В каком городе Австралии находится посольство РФ?
           Children:
             - Id: CB
-              Name: Canberra
+              Name: Канберра
         - Id: KOR
-          Name: South Korea
+          Name: Южная Корея
+          Description: В каком городе Южной Кореи находится посольство РФ?
           Children:
             - Id: SEO
-              Name: Seoul
+              Name: Сеул
         - Id: THA
-          Name: Thailand
+          Name: Таиланд
+          Description: В каком городе Таиланда находится посольство РФ?
           Children:
             - Id: BKK
-              Name: Bangkok
+              Name: Бангкок
         - Id: SGP
-          Name: Singapore
+          Name: Сингапур
+          Description: В каком городе Сингапура находится посольство РФ?
           Children:
             - Id: SGP
-              Name: Singapore
+              Name: Сингапур
         - Id: SA
-          Name: Saudi Arabia
+          Name: Саудовская Аравия
+          Description: В каком городе Саудовской Аравии находится посольство РФ?
           Children:
             - Id: RD
-              Name: Riyadh
+              Name: Эр-Рияд
         - Id: ZA
-          Name: South Africa
+          Name: Южно-Африканская Республика
+          Description: В каком городе ЮАР находится посольство РФ?
           Children:
             - Id: PTA
-              Name: Pretoria
+              Name: Претория
     - Id: DE
-      Name: German
+      Name: Deutsche
+      Description: Wählen Sie eine Botschaft
       Children:
         - Id: ESP
-          Name: Spain
+          Name: Spanien
+          Description: In welcher Stadt Spaniens befindet sich die deutsche Botschaft?
           Children:
             - Id: MAD
               Name: Madrid
         - Id: ITA
-          Name: Italy
+          Name: Italien
+          Description: In welcher Stadt Italiens befindet sich die deutsche Botschaft?
           Children:
             - Id: ROM
-              Name: Rome
+              Name: Rom
     - Id: IT
-      Name: Italian
+      Name: Italiana
+      Description: Scegli un'ambasciata
       Children:
         - Id: GRE
-          Name: Greece
+          Name: Grecia
+          Description: In quale città della Grecia si trova l'ambasciata italiana?
           Children:
             - Id: ATH
-              Name: Athens
+              Name: Atene
         - Id: UKR
-          Name: Ukraine
+          Name: Ucraina
+          Description: In quale città dell'Ucraina si trova l'ambasciata italiana?
           Children:
             - Id: KYIV
-              Name: Kyiv
+              Name: Kiev
     - Id: UK
       Name: British
+      Description: Choose an embassy
       Children:
         - Id: POL
           Name: Poland
+          Description: In which city in Poland is the British embassy located?
           Children:
             - Id: WAR
               Name: Warsaw
         - Id: CZE
           Name: Czechia
+          Description: In which city in Czechia is the British embassy located?
           Children:
             - Id: PRG
               Name: Prague
     - Id: FR
-      Name: French
+      Name: Française
+      Description: Choisissez une ambassade
       Children:
         - Id: BEL
-          Name: Belgium
+          Name: Belgique
+          Description: Dans quelle ville de Belgique se trouve l'ambassade de France ?
           Children:
             - Id: BRU
-              Name: Brussels
+              Name: Bruxelles
         - Id: GER
-          Name: Germany
+          Name: Allemagne
+          Description: Dans quelle ville d'Allemagne se trouve l'ambassade de France ?
           Children:
             - Id: BER
               Name: Berlin
@@ -344,9 +379,11 @@ Embassies:
 RussianEmbassy:
   Id: EMB
   Name: Посольство РФ
+  Description: Выберите услугу посольства РФ
   Children:
     - Id: PASS
       Name: Паспорт
+      Description: Выберите услугу по паспорту посольства РФ
       Children:
         - Id: ISS
           Name: Выпуск заграничного паспорта
@@ -357,12 +394,14 @@ RussianEmbassy:
     - Id: RPL
       Name: Нотариат
       Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте ее в чат.
+      Description: Выберите услугу нотариата посольства РФ
       Children:
         - Id: PWR
           Name: Доверенность
           Instruction: Что бы воспользоваться услугой, добавьте ссылку, которую вы получили в email при регистрации после символа | в вышеуказанную команду и отправьте
     - Id: VSA
       Name: Гражданство
+      Description: Выберите услугу гражданства посольства РФ
       Children:
         - Id: ISS
           Name: Отказ от гражданства
