--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="persistence\repositories\InMemoryRepository.fs"/>
         <Compile Include="persistence\Repository.fs"/>
         <Compile Include="persistence\Storage.fs"/>
+        <Compile Include="data_access\DataAccess.Chat.fs" />
         <Compile Include="Command.fs"/>
         <Compile Include="embassy_handlers\Russian.fs" />
         <Compile Include="CommandHandler.fs" />
