--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -16,7 +16,8 @@
         <Compile Include="data_access\DataAccess.Chat.fs" />
         <Compile Include="Command.fs"/>
         <Compile Include="embassy_handlers\Russian.fs" />
-        <Compile Include="CommandHandler.fs" />
+        <Compile Include="CommandHandler.Domain.fs" />
+        <Compile Include="CommandHandler.Core.fs" />
         <Compile Include="Consumer.fs"/>
         <Compile Include="Producer.fs"/>
     </ItemGroup>
