--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -5,23 +5,28 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="services\city.kdmid.ru\Domain.fs" />
-        <Compile Include="services\city.kdmid.ru\web\Http.fs" />
-        <Compile Include="services\city.kdmid.ru\web\Html.fs" />
-        <Compile Include="services\city.kdmid.ru\web\pages\InitialPage.fs" />
-        <Compile Include="services\city.kdmid.ru\web\pages\ValidationPage.fs" />
-        <Compile Include="services\city.kdmid.ru\web\pages\AppointmentsPage.fs" />
-        <Compile Include="services\city.kdmid.ru\web\pages\ConfirmationPage.fs" />
-        <Compile Include="services\city.kdmid.ru\core\Order.fs" />
-        <Compile Include="services\info.midpass.ru\Domain.fs" />
-        <Compile Include="Domain.fs" />
-        <Compile Include="Mapper.fs" />
-        <Compile Include="Settings.fs" />
-        <Compile Include="API.fs" />
+        <Compile Include="services\city.kdmid.ru\Domain.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\Http.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\Html.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\pages\InitialPage.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\pages\ValidationPage.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\pages\AppointmentsPage.fs"/>
+        <Compile Include="services\city.kdmid.ru\web\pages\ConfirmationPage.fs"/>
+        <Compile Include="services\city.kdmid.ru\core\Order.fs"/>
+        <Compile Include="services\info.midpass.ru\Domain.fs"/>
+        <Compile Include="Domain.fs"/>
+        <Compile Include="Mapper.fs"/>
+        <Compile Include="Settings.fs"/>
+        <Compile Include="API.fs"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\embassy-access-core\embassy-access-core.fsproj" />
+        <PackageReference Include="SkiaSharp" Version="2.88.9"/>
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.9"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\embassy-access-core\embassy-access-core.fsproj"/>
     </ItemGroup>
 
 </Project>
