--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -1,33 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-	</PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Include="Domain.fs" />
-		<Compile Include="Settings.fs" />
-		<Compile Include="embassies\Russian.fs" />
-		<Compile Include="Initializer.fs" />
-		<Compile Include="Program.fs" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Include="Domain.fs"/>
+        <Compile Include="Settings.fs"/>
+        <Compile Include="data_access\DataAccess.WorkTask.fs"/>
+        <Compile Include="data_access\DataAccess.TaskGraph.fs" />
+        <Compile Include="embassies\Russian.fs"/>
+        <Compile Include="Initializer.fs"/>
+        <Compile Include="Program.fs"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<Content Include="Dockerfile" />
-		<Content Include="..\..\.dockerignore">
-			<Link>.dockerignore</Link>
-		</Content>
-		<Content Include="appsettings.yaml">
-		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
+    <ItemGroup>
+        <Content Include="Dockerfile"/>
+        <Content Include="..\..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+        <Content Include="appsettings.yaml">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
-		<ProjectReference Include="..\embassy-access-telegram\embassy-access-telegram.fsproj" />
-		<ProjectReference Include="..\embassy-access-modules\embassy-access-modules-russian\embassy-access-modules-russian.fsproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj"/>
+        <ProjectReference Include="..\embassy-access-telegram\embassy-access-telegram.fsproj"/>
+        <ProjectReference Include="..\embassy-access-modules\embassy-access-modules-russian\embassy-access-modules-russian.fsproj"/>
+    </ItemGroup>
 
 </Project>
