--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,10 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Domain.fs"/>
-        <Compile Include="Settings.fs"/>
-        <Compile Include="data_access\DataAccess.WorkTask.fs"/>
-        <Compile Include="data_access\DataAccess.TaskGraph.fs" />
+        <Compile Include="domain\Domain.Route.fs" />
         <Compile Include="embassies\Russian.fs"/>
         <Compile Include="Initializer.fs"/>
         <Compile Include="Program.fs"/>
